--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,5 +1,6 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
+allow 102.130.127.117;
 allow 102.211.56.12;
 allow 102.211.56.200;
 allow 103.109.101.105;
@@ -82,6 +83,7 @@ allow 108.59.12.41;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.228.160.190;
 allow 109.237.27.11;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -185,7 +187,6 @@ allow 172.104.186.73;
 allow 172.104.243.155;
 allow 172.105.174.195;
 allow 172.105.20.12;
-allow 172.105.203.121;
 allow 172.232.209.254;
 allow 172.233.82.41;
 allow 172.234.228.174;
@@ -200,7 +201,6 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.140.210;
@@ -579,7 +579,9 @@ allow 195.47.238.177;
 allow 195.47.238.178;
 allow 195.47.238.44;
 allow 195.47.238.90;
+allow 195.47.238.91;
 allow 195.47.238.92;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
@@ -873,7 +875,6 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -898,9 +899,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.30;
-allow 23.191.200.4;
+allow 23.191.200.31;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -948,7 +951,6 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1157,7 +1159,6 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:e5c0:9ef2::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
@@ -1386,7 +1387,9 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:4d00:2:8::2;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
@@ -1787,6 +1790,7 @@ allow 82.221.139.190;
 allow 8.222.227.10;
 allow 83.147.17.190;
 allow 83.217.9.73;
+allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
@@ -1844,6 +1848,7 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
+allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.231.118;
