--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -37,7 +37,6 @@ allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
 allow 104.254.90.195;
-allow 104.36.80.7;
 allow 107.172.61.206;
 allow 107.173.187.181;
 allow 107.174.146.25;
@@ -252,6 +251,7 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -535,19 +535,6 @@ allow 192.42.116.219;
 allow 192.76.153.253;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.189.100.194;
-allow 193.189.100.195;
-allow 193.189.100.196;
-allow 193.189.100.197;
-allow 193.189.100.198;
-allow 193.189.100.199;
-allow 193.189.100.200;
-allow 193.189.100.201;
-allow 193.189.100.202;
-allow 193.189.100.203;
-allow 193.189.100.204;
-allow 193.189.100.205;
-allow 193.189.100.206;
 allow 193.237.155.109;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -890,7 +877,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -898,8 +884,8 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1213,6 +1199,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1243,6 +1230,7 @@ allow 2a06:1700:1:108::b829:eee2;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1458,19 +1446,6 @@ allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
-allow 2a0f:df00:0:255::194;
-allow 2a0f:df00:0:255::195;
-allow 2a0f:df00:0:255::196;
-allow 2a0f:df00:0:255::197;
-allow 2a0f:df00:0:255::198;
-allow 2a0f:df00:0:255::199;
-allow 2a0f:df00:0:255::200;
-allow 2a0f:df00:0:255::201;
-allow 2a0f:df00:0:255::202;
-allow 2a0f:df00:0:255::203;
-allow 2a0f:df00:0:255::204;
-allow 2a0f:df00:0:255::205;
-allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1698,6 +1673,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1847,6 +1823,7 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
+allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.231.118;
