--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -410,6 +410,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -440,6 +441,7 @@ set_real_ip_from 2a06:1700:1:108::b829:eee2;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -655,19 +657,6 @@ set_real_ip_from 2a0f:85c1:356:5a46::1;
 set_real_ip_from 2a0f:85c1:356:5c50::1;
 set_real_ip_from 2a0f:85c1:356:62ed::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
-set_real_ip_from 2a0f:df00:0:255::194;
-set_real_ip_from 2a0f:df00:0:255::195;
-set_real_ip_from 2a0f:df00:0:255::196;
-set_real_ip_from 2a0f:df00:0:255::197;
-set_real_ip_from 2a0f:df00:0:255::198;
-set_real_ip_from 2a0f:df00:0:255::199;
-set_real_ip_from 2a0f:df00:0:255::200;
-set_real_ip_from 2a0f:df00:0:255::201;
-set_real_ip_from 2a0f:df00:0:255::202;
-set_real_ip_from 2a0f:df00:0:255::203;
-set_real_ip_from 2a0f:df00:0:255::204;
-set_real_ip_from 2a0f:df00:0:255::205;
-set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
