--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -37,6 +37,7 @@ allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
 allow 104.254.90.195;
+allow 104.36.80.7;
 allow 107.172.61.206;
 allow 107.173.187.181;
 allow 107.174.146.25;
@@ -566,6 +567,7 @@ allow 195.47.238.177;
 allow 195.47.238.178;
 allow 195.47.238.44;
 allow 195.47.238.90;
+allow 195.47.238.91;
 allow 195.47.238.92;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -866,7 +868,6 @@ allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.184.48.78;
-allow 23.190.216.8;
 allow 23.191.200.10;
 allow 23.191.200.11;
 allow 23.191.200.12;
@@ -877,6 +878,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -887,7 +889,6 @@ allow 23.191.200.26;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -932,7 +933,6 @@ allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
-allow 2602:fa86::be24:11ff:fe70:fc41;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
@@ -1376,6 +1376,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:4d00:2:8::2;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
@@ -1823,7 +1824,6 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
-allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.231.118;
