--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -37,6 +37,7 @@ deny 104.244.79.44;
 deny 104.244.79.50;
 deny 104.244.79.61;
 deny 104.254.90.195;
+deny 104.36.80.7;
 deny 107.172.61.206;
 deny 107.173.187.181;
 deny 107.174.146.25;
@@ -566,6 +567,7 @@ deny 195.47.238.177;
 deny 195.47.238.178;
 deny 195.47.238.44;
 deny 195.47.238.90;
+deny 195.47.238.91;
 deny 195.47.238.92;
 deny 195.80.151.242;
 deny 195.88.74.206;
@@ -866,7 +868,6 @@ deny 23.137.254.244;
 deny 23.151.8.8;
 deny 23.155.8.104;
 deny 23.184.48.78;
-deny 23.190.216.8;
 deny 23.191.200.10;
 deny 23.191.200.11;
 deny 23.191.200.12;
@@ -877,6 +878,7 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
+deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -887,7 +889,6 @@ deny 23.191.200.26;
 deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
-deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
@@ -932,7 +933,6 @@ deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
 deny 2602:f915:f:3b43::1;
-deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
@@ -1376,6 +1376,7 @@ deny 2a0b:f4c2::9;
 deny 2a0c:4d00:2:8::2;
 deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
@@ -1823,7 +1824,6 @@ deny 93.123.109.116;
 deny 93.123.109.44;
 deny 93.123.12.112;
 deny 93.94.51.243;
-deny 93.94.52.229;
 deny 93.95.227.37;
 deny 93.95.228.125;
 deny 93.95.231.118;
